2009-06-15  higepon  <higepon@users.sourceforge.jp>

        * OSCompatThread.h : Writing Thread library for Windows, not completed.

        * tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss: Fixed load-library-path. Thanks to mrc.mgg.

        * VM-inl.h: Added #include pointed out by mrc.mgg.

        * OSCompatThread.h : Fixed condition-variable-wait!. Thanks to Shiro Kawai for pointing out the bug.

2009-06-12  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/concurrent.ss: Added document.

2009-06-11  higepon  <higepon@users.sourceforge.jp>

        * Added one argument to spawn.

2009-06-10  higepon  <higepon@users.sourceforge.jp>

        * OSCompatThread.h : Conditional variables waitWithTimeout works.

2009-06-09  higepon  <higepon@users.sourceforge.jp>

        * test/concurrent-crash.ss : Added.

2009-06-05  higepon  <higepon@users.sourceforge.jp>

        * test/concurrent.ss : Added.

2009-06-03  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (pass3/$call): Fixed Issue 63.

        * Rewrote whole (mosh test) for performance reason.

        * Retry Issue 59.

        * Changed fasl file extension from *.fasl to *.mosh-fasl.

        * Makefile.am : Fixed the Issue 59.

2009-06-01  higepon  <higepon@users.sourceforge.jp>

        * lib/xunit.ss (xunit): it works.

2009-05-30  higepon  <higepon@users.sourceforge.jp>

        * Fixed append. (append) => '().  Issue 62.

        * example/echo-load.ss : OK this works.

        * Reader.y : Now reader context becomes thread safe.

        * COPYING: Fixed COPYING.

2009-05-29  higepon  <higepon@users.sourceforge.jp>

        * VMFactory.cpp : never close the standard ports.

2009-05-28  higepon  <higepon@users.sourceforge.jp>

        * example/process-pool-echo-server.ss : Added not working yet.

        * Codec.cpp (putChar): Fixed thread unsafe buffer.

        * VMFactory.cpp : Fixed a bug of stdio close problem.

2009-05-27  higepon  <higepon@users.sourceforge.jp>
